core/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ADD

Grammar

Rule 0     S' -> expression
Rule 1     expression -> expression AND expression
Rule 2     expression -> expression DOT NAME
Rule 3     expression -> COND LPAREN expression RPAREN
Rule 4     expression -> COSINE LPAREN expression RPAREN
Rule 5     expression -> LBRACE dictionary_items RBRACE
Rule 6     expression -> LBRACE dictionary_items COMMA RBRACE
Rule 7     expression -> LBRACE RBRACE
Rule 8     expression -> expression DIVIDE expression
Rule 9     expression -> expression EQUALTO expression
Rule 10    expression -> FALSE
Rule 11    expression -> expression FLOORDIVIDE expression
Rule 12    expression -> NAME LPAREN optional_arguments RPAREN
Rule 13    expression -> expression GREATERTHAN expression
Rule 14    expression -> expression GREATERTHANEQUALTO expression
Rule 15    expression -> LPAREN expression RPAREN
Rule 16    expression -> expression IN expression
Rule 17    expression -> expression LBRACKET expression RBRACKET
Rule 18    expression -> ISTRING
Rule 19    expression -> expression LESSTHAN expression
Rule 20    expression -> expression LESSTHANEQUALTO expression
Rule 21    expression -> LBRACKET optional_arguments RBRACKET
Rule 22    expression -> expression AT expression
Rule 23    expression -> expression DOT NAME LPAREN optional_arguments RPAREN
Rule 24    expression -> expression MINUS expression
Rule 25    expression -> expression MODULO expression
Rule 26    expression -> NAME
Rule 27    expression -> NOT expression
Rule 28    expression -> expression NOT IN expression
Rule 29    expression -> expression NOTEQUALTO expression
Rule 30    expression -> NULL
Rule 31    expression -> NUMBER
Rule 32    expression -> expression OR expression
Rule 33    expression -> PI
Rule 34    expression -> expression PLUS expression
Rule 35    expression -> expression POWER expression
Rule 36    expression -> PRINT LPAREN expression RPAREN
Rule 37    expression -> RANGE LPAREN optional_arguments RPAREN
Rule 38    expression -> SINE LPAREN expression RPAREN
Rule 39    expression -> expression LBRACKET optional_expression COLON optional_expression RBRACKET
Rule 40    expression -> SQUAREROOT LPAREN expression RPAREN
Rule 41    expression -> STRING
Rule 42    expression -> TANGENT LPAREN expression RPAREN
Rule 43    expression -> expression MULTIPLY expression
Rule 44    expression -> TRUE
Rule 45    expression -> NAME EQ expression
Rule 46    dictionary_item -> expression COLON expression
Rule 47    dictionary_items -> dictionary_item
Rule 48    dictionary_items -> dictionary_items COMMA dictionary_item
Rule 49    optional_expression -> <empty>
Rule 50    optional_expression -> expression
Rule 51    optional_arguments -> <empty>
Rule 52    optional_arguments -> arguments
Rule 53    arguments -> expression
Rule 54    arguments -> arguments COMMA expression

Terminals, with rules where they appear

ADD                  : 
AND                  : 1
AT                   : 22
COLON                : 39 46
COMMA                : 6 48 54
COND                 : 3
COSINE               : 4
DIVIDE               : 8
DOT                  : 2 23
EQ                   : 45
EQUALTO              : 9
FALSE                : 10
FLOORDIVIDE          : 11
GREATERTHAN          : 13
GREATERTHANEQUALTO   : 14
IN                   : 16 28
ISTRING              : 18
LBRACE               : 5 6 7
LBRACKET             : 17 21 39
LESSTHAN             : 19
LESSTHANEQUALTO      : 20
LPAREN               : 3 4 12 15 23 36 37 38 40 42
MINUS                : 24
MODULO               : 25
MULTIPLY             : 43
NAME                 : 2 12 23 26 45
NOT                  : 27 28
NOTEQUALTO           : 29
NULL                 : 30
NUMBER               : 31
OR                   : 32
PI                   : 33
PLUS                 : 34
POWER                : 35
PRINT                : 36
RANGE                : 37
RBRACE               : 5 6 7
RBRACKET             : 17 21 39
RPAREN               : 3 4 12 15 23 36 37 38 40 42
SINE                 : 38
SQUAREROOT           : 40
STRING               : 41
TANGENT              : 42
TRUE                 : 44
error                : 

Nonterminals, with rules where they appear

arguments            : 52 54
dictionary_item      : 47 48
dictionary_items     : 5 6 48
expression           : 1 1 2 3 4 8 8 9 9 11 11 13 13 14 14 15 16 16 17 17 19 19 20 20 22 22 23 24 24 25 25 27 28 28 29 29 32 32 34 34 35 35 36 38 39 40 42 43 43 45 46 46 50 53 54 0
optional_arguments   : 12 21 23 37
optional_expression  : 39 39

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . expression AND expression
    (2) expression -> . expression DOT NAME
    (3) expression -> . COND LPAREN expression RPAREN
    (4) expression -> . COSINE LPAREN expression RPAREN
    (5) expression -> . LBRACE dictionary_items RBRACE
    (6) expression -> . LBRACE dictionary_items COMMA RBRACE
    (7) expression -> . LBRACE RBRACE
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQUALTO expression
    (10) expression -> . FALSE
    (11) expression -> . expression FLOORDIVIDE expression
    (12) expression -> . NAME LPAREN optional_arguments RPAREN
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression GREATERTHANEQUALTO expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . expression IN expression
    (17) expression -> . expression LBRACKET expression RBRACKET
    (18) expression -> . ISTRING
    (19) expression -> . expression LESSTHAN expression
    (20) expression -> . expression LESSTHANEQUALTO expression
    (21) expression -> . LBRACKET optional_arguments RBRACKET
    (22) expression -> . expression AT expression
    (23) expression -> . expression DOT NAME LPAREN optional_arguments RPAREN
    (24) expression -> . expression MINUS expression
    (25) expression -> . expression MODULO expression
    (26) expression -> . NAME
    (27) expression -> . NOT expression
    (28) expression -> . expression NOT IN expression
    (29) expression -> . expression NOTEQUALTO expression
    (30) expression -> . NULL
    (31) expression -> . NUMBER
    (32) expression -> . expression OR expression
    (33) expression -> . PI
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression POWER expression
    (36) expression -> . PRINT LPAREN expression RPAREN
    (37) expression -> . RANGE LPAREN optional_arguments RPAREN
    (38) expression -> . SINE LPAREN expression RPAREN
    (39) expression -> . expression LBRACKET optional_expression COLON optional_expression RBRACKET
    (40) expression -> . SQUAREROOT LPAREN expression RPAREN
    (41) expression -> . STRING
    (42) expression -> . TANGENT LPAREN expression RPAREN
    (43) expression -> . expression MULTIPLY expression
    (44) expression -> . TRUE
    (45) expression -> . NAME EQ expression

    COND            shift and go to state 3
    COSINE          shift and go to state 5
    LBRACE          shift and go to state 6
    FALSE           shift and go to state 7
    NAME            shift and go to state 2
    LPAREN          shift and go to state 4
    ISTRING         shift and go to state 9
    LBRACKET        shift and go to state 8
    NOT             shift and go to state 10
    NULL            shift and go to state 11
    NUMBER          shift and go to state 12
    PI              shift and go to state 13
    PRINT           shift and go to state 14
    RANGE           shift and go to state 15
    SINE            shift and go to state 16
    SQUAREROOT      shift and go to state 17
    STRING          shift and go to state 18
    TANGENT         shift and go to state 19
    TRUE            shift and go to state 20

    expression                     shift and go to state 1

state 1

    (0) S' -> expression .
    (1) expression -> expression . AND expression
    (2) expression -> expression . DOT NAME
    (8) expression -> expression . DIVIDE expression
    (9) expression -> expression . EQUALTO expression
    (11) expression -> expression . FLOORDIVIDE expression
    (13) expression -> expression . GREATERTHAN expression
    (14) expression -> expression . GREATERTHANEQUALTO expression
    (16) expression -> expression . IN expression
    (17) expression -> expression . LBRACKET expression RBRACKET
    (19) expression -> expression . LESSTHAN expression
    (20) expression -> expression . LESSTHANEQUALTO expression
    (22) expression -> expression . AT expression
    (23) expression -> expression . DOT NAME LPAREN optional_arguments RPAREN
    (24) expression -> expression . MINUS expression
    (25) expression -> expression . MODULO expression
    (28) expression -> expression . NOT IN expression
    (29) expression -> expression . NOTEQUALTO expression
    (32) expression -> expression . OR expression
    (34) expression -> expression . PLUS expression
    (35) expression -> expression . POWER expression
    (39) expression -> expression . LBRACKET optional_expression COLON optional_expression RBRACKET
    (43) expression -> expression . MULTIPLY expression

    AND             shift and go to state 21
    DOT             shift and go to state 22
    DIVIDE          shift and go to state 23
    EQUALTO         shift and go to state 24
    FLOORDIVIDE     shift and go to state 25
    GREATERTHAN     shift and go to state 26
    GREATERTHANEQUALTO shift and go to state 27
    IN              shift and go to state 28
    LBRACKET        shift and go to state 29
    LESSTHAN        shift and go to state 30
    LESSTHANEQUALTO shift and go to state 31
    AT              shift and go to state 32
    MINUS           shift and go to state 33
    MODULO          shift and go to state 34
    NOT             shift and go to state 35
    NOTEQUALTO      shift and go to state 36
    OR              shift and go to state 37
    PLUS            shift and go to state 38
    POWER           shift and go to state 39
    MULTIPLY        shift and go to state 40


state 2

    (12) expression -> NAME . LPAREN optional_arguments RPAREN
    (26) expression -> NAME .
    (45) expression -> NAME . EQ expression

    LPAREN          shift and go to state 41
    AND             reduce using rule 26 (expression -> NAME .)
    DOT             reduce using rule 26 (expression -> NAME .)
    DIVIDE          reduce using rule 26 (expression -> NAME .)
    EQUALTO         reduce using rule 26 (expression -> NAME .)
    FLOORDIVIDE     reduce using rule 26 (expression -> NAME .)
    GREATERTHAN     reduce using rule 26 (expression -> NAME .)
    GREATERTHANEQUALTO reduce using rule 26 (expression -> NAME .)
    IN              reduce using rule 26 (expression -> NAME .)
    LBRACKET        reduce using rule 26 (expression -> NAME .)
    LESSTHAN        reduce using rule 26 (expression -> NAME .)
    LESSTHANEQUALTO reduce using rule 26 (expression -> NAME .)
    AT              reduce using rule 26 (expression -> NAME .)
    MINUS           reduce using rule 26 (expression -> NAME .)
    MODULO          reduce using rule 26 (expression -> NAME .)
    NOT             reduce using rule 26 (expression -> NAME .)
    NOTEQUALTO      reduce using rule 26 (expression -> NAME .)
    OR              reduce using rule 26 (expression -> NAME .)
    PLUS            reduce using rule 26 (expression -> NAME .)
    POWER           reduce using rule 26 (expression -> NAME .)
    MULTIPLY        reduce using rule 26 (expression -> NAME .)
    $end            reduce using rule 26 (expression -> NAME .)
    RPAREN          reduce using rule 26 (expression -> NAME .)
    COLON           reduce using rule 26 (expression -> NAME .)
    COMMA           reduce using rule 26 (expression -> NAME .)
    RBRACKET        reduce using rule 26 (expression -> NAME .)
    RBRACE          reduce using rule 26 (expression -> NAME .)
    EQ              shift and go to state 42


state 3

    (3) expression -> COND . LPAREN expression RPAREN

    LPAREN          shift and go to state 43


state 4

    (15) expression -> LPAREN . expression RPAREN
    (1) expression -> . expression AND expression
    (2) expression -> . expression DOT NAME
    (3) expression -> . COND LPAREN expression RPAREN
    (4) expression -> . COSINE LPAREN expression RPAREN
    (5) expression -> . LBRACE dictionary_items RBRACE
    (6) expression -> . LBRACE dictionary_items COMMA RBRACE
    (7) expression -> . LBRACE RBRACE
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQUALTO expression
    (10) expression -> . FALSE
    (11) expression -> . expression FLOORDIVIDE expression
    (12) expression -> . NAME LPAREN optional_arguments RPAREN
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression GREATERTHANEQUALTO expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . expression IN expression
    (17) expression -> . expression LBRACKET expression RBRACKET
    (18) expression -> . ISTRING
    (19) expression -> . expression LESSTHAN expression
    (20) expression -> . expression LESSTHANEQUALTO expression
    (21) expression -> . LBRACKET optional_arguments RBRACKET
    (22) expression -> . expression AT expression
    (23) expression -> . expression DOT NAME LPAREN optional_arguments RPAREN
    (24) expression -> . expression MINUS expression
    (25) expression -> . expression MODULO expression
    (26) expression -> . NAME
    (27) expression -> . NOT expression
    (28) expression -> . expression NOT IN expression
    (29) expression -> . expression NOTEQUALTO expression
    (30) expression -> . NULL
    (31) expression -> . NUMBER
    (32) expression -> . expression OR expression
    (33) expression -> . PI
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression POWER expression
    (36) expression -> . PRINT LPAREN expression RPAREN
    (37) expression -> . RANGE LPAREN optional_arguments RPAREN
    (38) expression -> . SINE LPAREN expression RPAREN
    (39) expression -> . expression LBRACKET optional_expression COLON optional_expression RBRACKET
    (40) expression -> . SQUAREROOT LPAREN expression RPAREN
    (41) expression -> . STRING
    (42) expression -> . TANGENT LPAREN expression RPAREN
    (43) expression -> . expression MULTIPLY expression
    (44) expression -> . TRUE
    (45) expression -> . NAME EQ expression

    COND            shift and go to state 3
    COSINE          shift and go to state 5
    LBRACE          shift and go to state 6
    FALSE           shift and go to state 7
    NAME            shift and go to state 2
    LPAREN          shift and go to state 4
    ISTRING         shift and go to state 9
    LBRACKET        shift and go to state 8
    NOT             shift and go to state 10
    NULL            shift and go to state 11
    NUMBER          shift and go to state 12
    PI              shift and go to state 13
    PRINT           shift and go to state 14
    RANGE           shift and go to state 15
    SINE            shift and go to state 16
    SQUAREROOT      shift and go to state 17
    STRING          shift and go to state 18
    TANGENT         shift and go to state 19
    TRUE            shift and go to state 20

    expression                     shift and go to state 44

state 5

    (4) expression -> COSINE . LPAREN expression RPAREN

    LPAREN          shift and go to state 45


state 6

    (5) expression -> LBRACE . dictionary_items RBRACE
    (6) expression -> LBRACE . dictionary_items COMMA RBRACE
    (7) expression -> LBRACE . RBRACE
    (47) dictionary_items -> . dictionary_item
    (48) dictionary_items -> . dictionary_items COMMA dictionary_item
    (46) dictionary_item -> . expression COLON expression
    (1) expression -> . expression AND expression
    (2) expression -> . expression DOT NAME
    (3) expression -> . COND LPAREN expression RPAREN
    (4) expression -> . COSINE LPAREN expression RPAREN
    (5) expression -> . LBRACE dictionary_items RBRACE
    (6) expression -> . LBRACE dictionary_items COMMA RBRACE
    (7) expression -> . LBRACE RBRACE
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQUALTO expression
    (10) expression -> . FALSE
    (11) expression -> . expression FLOORDIVIDE expression
    (12) expression -> . NAME LPAREN optional_arguments RPAREN
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression GREATERTHANEQUALTO expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . expression IN expression
    (17) expression -> . expression LBRACKET expression RBRACKET
    (18) expression -> . ISTRING
    (19) expression -> . expression LESSTHAN expression
    (20) expression -> . expression LESSTHANEQUALTO expression
    (21) expression -> . LBRACKET optional_arguments RBRACKET
    (22) expression -> . expression AT expression
    (23) expression -> . expression DOT NAME LPAREN optional_arguments RPAREN
    (24) expression -> . expression MINUS expression
    (25) expression -> . expression MODULO expression
    (26) expression -> . NAME
    (27) expression -> . NOT expression
    (28) expression -> . expression NOT IN expression
    (29) expression -> . expression NOTEQUALTO expression
    (30) expression -> . NULL
    (31) expression -> . NUMBER
    (32) expression -> . expression OR expression
    (33) expression -> . PI
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression POWER expression
    (36) expression -> . PRINT LPAREN expression RPAREN
    (37) expression -> . RANGE LPAREN optional_arguments RPAREN
    (38) expression -> . SINE LPAREN expression RPAREN
    (39) expression -> . expression LBRACKET optional_expression COLON optional_expression RBRACKET
    (40) expression -> . SQUAREROOT LPAREN expression RPAREN
    (41) expression -> . STRING
    (42) expression -> . TANGENT LPAREN expression RPAREN
    (43) expression -> . expression MULTIPLY expression
    (44) expression -> . TRUE
    (45) expression -> . NAME EQ expression

    RBRACE          shift and go to state 47
    COND            shift and go to state 3
    COSINE          shift and go to state 5
    LBRACE          shift and go to state 6
    FALSE           shift and go to state 7
    NAME            shift and go to state 2
    LPAREN          shift and go to state 4
    ISTRING         shift and go to state 9
    LBRACKET        shift and go to state 8
    NOT             shift and go to state 10
    NULL            shift and go to state 11
    NUMBER          shift and go to state 12
    PI              shift and go to state 13
    PRINT           shift and go to state 14
    RANGE           shift and go to state 15
    SINE            shift and go to state 16
    SQUAREROOT      shift and go to state 17
    STRING          shift and go to state 18
    TANGENT         shift and go to state 19
    TRUE            shift and go to state 20

    dictionary_items               shift and go to state 46
    dictionary_item                shift and go to state 48
    expression                     shift and go to state 49

state 7

    (10) expression -> FALSE .

    AND             reduce using rule 10 (expression -> FALSE .)
    DOT             reduce using rule 10 (expression -> FALSE .)
    DIVIDE          reduce using rule 10 (expression -> FALSE .)
    EQUALTO         reduce using rule 10 (expression -> FALSE .)
    FLOORDIVIDE     reduce using rule 10 (expression -> FALSE .)
    GREATERTHAN     reduce using rule 10 (expression -> FALSE .)
    GREATERTHANEQUALTO reduce using rule 10 (expression -> FALSE .)
    IN              reduce using rule 10 (expression -> FALSE .)
    LBRACKET        reduce using rule 10 (expression -> FALSE .)
    LESSTHAN        reduce using rule 10 (expression -> FALSE .)
    LESSTHANEQUALTO reduce using rule 10 (expression -> FALSE .)
    AT              reduce using rule 10 (expression -> FALSE .)
    MINUS           reduce using rule 10 (expression -> FALSE .)
    MODULO          reduce using rule 10 (expression -> FALSE .)
    NOT             reduce using rule 10 (expression -> FALSE .)
    NOTEQUALTO      reduce using rule 10 (expression -> FALSE .)
    OR              reduce using rule 10 (expression -> FALSE .)
    PLUS            reduce using rule 10 (expression -> FALSE .)
    POWER           reduce using rule 10 (expression -> FALSE .)
    MULTIPLY        reduce using rule 10 (expression -> FALSE .)
    $end            reduce using rule 10 (expression -> FALSE .)
    RPAREN          reduce using rule 10 (expression -> FALSE .)
    COLON           reduce using rule 10 (expression -> FALSE .)
    COMMA           reduce using rule 10 (expression -> FALSE .)
    RBRACKET        reduce using rule 10 (expression -> FALSE .)
    RBRACE          reduce using rule 10 (expression -> FALSE .)


state 8

    (21) expression -> LBRACKET . optional_arguments RBRACKET
    (51) optional_arguments -> .
    (52) optional_arguments -> . arguments
    (53) arguments -> . expression
    (54) arguments -> . arguments COMMA expression
    (1) expression -> . expression AND expression
    (2) expression -> . expression DOT NAME
    (3) expression -> . COND LPAREN expression RPAREN
    (4) expression -> . COSINE LPAREN expression RPAREN
    (5) expression -> . LBRACE dictionary_items RBRACE
    (6) expression -> . LBRACE dictionary_items COMMA RBRACE
    (7) expression -> . LBRACE RBRACE
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQUALTO expression
    (10) expression -> . FALSE
    (11) expression -> . expression FLOORDIVIDE expression
    (12) expression -> . NAME LPAREN optional_arguments RPAREN
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression GREATERTHANEQUALTO expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . expression IN expression
    (17) expression -> . expression LBRACKET expression RBRACKET
    (18) expression -> . ISTRING
    (19) expression -> . expression LESSTHAN expression
    (20) expression -> . expression LESSTHANEQUALTO expression
    (21) expression -> . LBRACKET optional_arguments RBRACKET
    (22) expression -> . expression AT expression
    (23) expression -> . expression DOT NAME LPAREN optional_arguments RPAREN
    (24) expression -> . expression MINUS expression
    (25) expression -> . expression MODULO expression
    (26) expression -> . NAME
    (27) expression -> . NOT expression
    (28) expression -> . expression NOT IN expression
    (29) expression -> . expression NOTEQUALTO expression
    (30) expression -> . NULL
    (31) expression -> . NUMBER
    (32) expression -> . expression OR expression
    (33) expression -> . PI
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression POWER expression
    (36) expression -> . PRINT LPAREN expression RPAREN
    (37) expression -> . RANGE LPAREN optional_arguments RPAREN
    (38) expression -> . SINE LPAREN expression RPAREN
    (39) expression -> . expression LBRACKET optional_expression COLON optional_expression RBRACKET
    (40) expression -> . SQUAREROOT LPAREN expression RPAREN
    (41) expression -> . STRING
    (42) expression -> . TANGENT LPAREN expression RPAREN
    (43) expression -> . expression MULTIPLY expression
    (44) expression -> . TRUE
    (45) expression -> . NAME EQ expression

    RBRACKET        reduce using rule 51 (optional_arguments -> .)
    COND            shift and go to state 3
    COSINE          shift and go to state 5
    LBRACE          shift and go to state 6
    FALSE           shift and go to state 7
    NAME            shift and go to state 2
    LPAREN          shift and go to state 4
    ISTRING         shift and go to state 9
    LBRACKET        shift and go to state 8
    NOT             shift and go to state 10
    NULL            shift and go to state 11
    NUMBER          shift and go to state 12
    PI              shift and go to state 13
    PRINT           shift and go to state 14
    RANGE           shift and go to state 15
    SINE            shift and go to state 16
    SQUAREROOT      shift and go to state 17
    STRING          shift and go to state 18
    TANGENT         shift and go to state 19
    TRUE            shift and go to state 20

    optional_arguments             shift and go to state 50
    arguments                      shift and go to state 51
    expression                     shift and go to state 52

state 9

    (18) expression -> ISTRING .

    AND             reduce using rule 18 (expression -> ISTRING .)
    DOT             reduce using rule 18 (expression -> ISTRING .)
    DIVIDE          reduce using rule 18 (expression -> ISTRING .)
    EQUALTO         reduce using rule 18 (expression -> ISTRING .)
    FLOORDIVIDE     reduce using rule 18 (expression -> ISTRING .)
    GREATERTHAN     reduce using rule 18 (expression -> ISTRING .)
    GREATERTHANEQUALTO reduce using rule 18 (expression -> ISTRING .)
    IN              reduce using rule 18 (expression -> ISTRING .)
    LBRACKET        reduce using rule 18 (expression -> ISTRING .)
    LESSTHAN        reduce using rule 18 (expression -> ISTRING .)
    LESSTHANEQUALTO reduce using rule 18 (expression -> ISTRING .)
    AT              reduce using rule 18 (expression -> ISTRING .)
    MINUS           reduce using rule 18 (expression -> ISTRING .)
    MODULO          reduce using rule 18 (expression -> ISTRING .)
    NOT             reduce using rule 18 (expression -> ISTRING .)
    NOTEQUALTO      reduce using rule 18 (expression -> ISTRING .)
    OR              reduce using rule 18 (expression -> ISTRING .)
    PLUS            reduce using rule 18 (expression -> ISTRING .)
    POWER           reduce using rule 18 (expression -> ISTRING .)
    MULTIPLY        reduce using rule 18 (expression -> ISTRING .)
    $end            reduce using rule 18 (expression -> ISTRING .)
    RPAREN          reduce using rule 18 (expression -> ISTRING .)
    COLON           reduce using rule 18 (expression -> ISTRING .)
    COMMA           reduce using rule 18 (expression -> ISTRING .)
    RBRACKET        reduce using rule 18 (expression -> ISTRING .)
    RBRACE          reduce using rule 18 (expression -> ISTRING .)


state 10

    (27) expression -> NOT . expression
    (1) expression -> . expression AND expression
    (2) expression -> . expression DOT NAME
    (3) expression -> . COND LPAREN expression RPAREN
    (4) expression -> . COSINE LPAREN expression RPAREN
    (5) expression -> . LBRACE dictionary_items RBRACE
    (6) expression -> . LBRACE dictionary_items COMMA RBRACE
    (7) expression -> . LBRACE RBRACE
    (8) expression -> . expression DIVIDE expression
    (9) expression -> . expression EQUALTO expression
    (10) expression -> . FALSE
    (11) expression -> . expression FLOORDIVIDE expression
    (12) expression -> . NAME LPAREN optional_arguments RPAREN
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression GREATERTHANEQUALTO expression
    (15) expression -> . LPAREN expression RPAREN
    (16) expression -> . expression IN expression
    (17) expression -> . expression LBRACKET expression RBRACKET
    (18) expression -> . ISTRING
    (19) expression -> . expression LESSTHAN expression
    (20) expression -> . expression LESSTHANEQUALTO expression
    (21) expression -> . LBRACKET optional_arguments RBRACKET
    (22) expression -> . expression AT expression
    (23) expression -> . expression DOT NAME LPAREN optional_arguments RPAREN
    (24) expression -> . expression MINUS expression
    (25) expression -> . expression MODULO expression
    (26) expression -> . NAME
    (27) expression -> . NOT expression
    (28) expression -> . expression NOT IN expression
    (29) expression -> . expression NOTEQUALTO expression
    (30) expression -> . NULL
    (31) expression -> . NUMBER
    (32) expression -> . expression OR expression
    (33) expression -> . PI
    (34) expression -> . expression PLUS expression
    (35) expression -> . expression POWER expression
    (36) expression -> . PRINT LPAREN expression RPAREN
    (37) expression -> . RANGE LPAREN optional_arguments RPAREN
    (38) expression -> . SINE LPAREN expression RPAREN
    (39) expression -> . expression LBRACKET optional_expression COLON optional_expression RBRACKET
    (40) expression -> . SQUAREROOT LPAREN expression RPAREN
    (41) expression -> . STRING
    (42) expression -> . TANGENT LPAREN expression RPAREN
    (43) expression -> . expression MULTIPLY expression
    (44) expression -> . TRUE
    (45) expression -> . NAME EQ expression

    COND            shift and go to state 3
    COSINE          shift and go to state 5
    LBRACE          shift and go to state 6
    FALSE           shift and go to state 7
    NAME            shift and go to state 2
    LPAREN          shift and go to state 4
    ISTRING         shift and go to state 9
    LBRACKET        shift and go to state 8
    NOT             shift and go to state 10
    NULL            shift and go to state 11
    NUMBER          shift and go to state 12
    PI              shift and go to state 13
    PRINT           shift and go to state 14
    RANGE           shift and go to state 15
    SINE            shift and go to state 16
    SQUAREROOT      shift and go to state 17
    STRING          shift and go to state 18
    TANGENT         shift and go to state 19
    TRUE            shift and go to state 20

    expression                     shift and go to state 53

state 11

    (30) expression -> NULL .

    AND             reduce using rule 30 (expression -> NULL .)
    DOT             reduce using rule 30 (expression -> NULL .)
    DIVIDE          reduce using rule 30 (expression -> NULL .)
    EQUALTO         reduce using rule 30 (expression -> NULL .)
    FLOORDIVIDE     reduce using rule 30 (expression -> NULL .)
    GREATERTHAN     reduce using rule 30 (expression -> NULL .)
    GREATERTHANEQUALTO reduce using rule 30 (expression -> NULL .)
    IN              reduce using rule 30 (expression -> NULL .)
    LBRACKET        reduce using rule 30 (expression -> NULL .)
    LESSTHAN        reduce using rule 30 (expression -> NULL .)
    LESSTHANEQUALTO reduce using rule 30 (expression -> NULL .)
    AT              reduce using rule 30 (expression -> NULL .)
    MINUS           reduce using rule 30 (expression -> NULL .)
    MODULO          reduce using rule 30 (expression -> NULL .)
    NOT             reduce using rule 30 (expression -> NULL .)
    NOTEQUALTO      reduce using rule 30 (expression -> NULL .)
    OR              reduce using rule 30 (expression -> NULL .)
    PLUS            reduce using rule 30 (expression -> NULL .)
    POWER           reduce using rule 30 (expression -> NULL .)
    MULTIPLY        reduce using rule 30 (expression -> NULL .)
    $end            reduce using rule 30 (expression -> NULL .)
    RPAREN          reduce using rule 30 (expression -> NULL .)
    COLON           reduce using rule 30 (expression -> NULL .)
    COMMA           reduce using rule 30 (expression -> NULL .)
    RBRACKET        reduce using rule 30 (expression -> NULL .)
    RBRACE          reduce using rule 30 (expression -> NULL .)


state 12

    (31) expression -> NUMBER .

    AND             reduce using rule 31 (expression -> NUMBER .)
    DOT             reduce using rule 31 (expression -> NUMBER .)
    DIVIDE          reduce using rule 31 (expression -> NUMBER .)
    EQUALTO         reduce using rule 31 (expression -> NUMBER .)
    FLOORDIVIDE     reduce using rule 31 (expression -> NUMBER .)
    GREATERTHAN     reduce using rule 31 (expression -> NUMBER .)
    GREATERTHANEQUALTO reduce using rule 31 (expression -> NUMBER .)
    IN              reduce using rule 31 (expression -> NUMBER .)
    LBRACKET        reduce using rule 31 (expression -> NUMBER .)
    LESSTHAN        reduce using rule 31 (expression -> NUMBER .)
    LESSTHANEQUALTO reduce using rule 31 (expression -> NUMBER .)
    AT              reduce using rule 31 (expression -> NUMBER .)
    MINUS           reduce using rule 31 (expression -> NUMBER .)
    MODULO          reduce using rule 31 (expression -> NUMBER .)
    NOT             reduce using rule 31 (expression -> NUMBER .)
    NOTEQUALTO      reduce using rule 31 (expression -> NUMBER .)
    OR              reduce using rule 31 (expression -> NUMBER .)
    PLUS            reduce using rule 31 (expression -> NUMBER .)
    POWER           reduce using rule 31 (expression -> NUMBER .)
    MULTIPLY        reduce using rule 31 (expression -> NUMBER .)
    $end            reduce using rule 31 (expression -> NUMBER .)
    RPAREN          reduce using rule 31 (expression -> NUMBER .)
    COLON           reduce using rule 31 (expression -> NUMBER .)
    COMMA           reduce using rule 31 (expression -> NUMBER .)
    RBRACKET        reduce using rule 31 (expression -> NUMBER .)
    RBRACE          reduce using rule 31 (expression -> NUMBER .)


state 13

    (33) expression -> PI .

    AND             reduce using rule 33 (expression -> PI .)
    DOT             reduce using rule 33 (expression -> PI .)
    DIVIDE          reduce using rule 33 (expression -> PI .)
    EQUALTO         reduce using rule 33 (expression -> PI .)
    FLOORDIVIDE     reduce using rule 33 (expression -> PI .)
    GREATERTHAN     reduce using rule 33 (expression -> PI .)
    GREATERTHANEQUALTO reduce using rule 33 (expression -> PI .)
    IN              reduce using rule 33 (expression -> PI .)
    LBRACKET        reduce using rule 33 (expression -> PI .)
    LESSTHAN        reduce using rule 33 (expression -> PI .)
    LESSTHANEQUALTO reduce using rule 33 (expression -> PI .)
    AT              reduce using rule 33 (expression -> PI .)
    MINUS           reduce using rule 33 (expression -> PI .)
    MODULO          reduce using rule 33 (expression -> PI .)
    NOT             reduce using rule 33 (expression -> PI .)
    NOTEQUALTO      reduce using rule 33 (expression -> PI .)
    OR              reduce using rule 33 (expression -> PI .)
    PLUS            reduce using rule 33 (expression -> PI .)
    POWER           reduce using rule 33 (expression -> PI .)
    MULTIPLY        reduce using rule 33 (expression -> PI .)
    $end            reduce using rule 33 (expression -> PI .)
    RPAREN          reduce using rule 33 (expression -> PI .)
    COLON           reduce using rule 33 (expression -> PI .)
    COMMA           reduce using rule 33 (expression -> PI .)
    RBRACKET        reduce using rule 33 (expression -> PI .)
    RBRACE          reduce using rule 33 (expression -> PI .)


state 14

    (36) expression -> PRINT . LPAREN expression RPAREN

    LPAREN          shift and go to state 54


state 15

    (37) expression -> RANGE . LPAREN optional_arguments RPAREN

    LPAREN          shift and go to state 55


state 16

    (38) expression -> SINE . LPAREN expression RPAREN

    LPAREN          shift and go to state 56


state 17

    (40) expression -> SQUAREROOT . LPAREN expression RPAREN

    LPAREN          shift and go to state 57


state 18

    (41) expression -> STRING .
